samples/_failures_safe/1761320539_af1ca1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_092c6ba0.c: In function ‘main’:
./samples/SAFE/__tmp_092c6ba0.c:181:5: error: expected declaration or statement at end of input
  181 |     }
      |     ^
